force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/leaseworks__Insurance_Certificate_IR__c.object-meta.xml
<CustomObject>
    <description>This Insurance Certificate object was introduced as part of Insurance Redesign module</description>
    <label>Insurance Certificate</label>
    <nameField>
        <label>Insurance Certificate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insurance Certificates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>