force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/leaseworks__Aggregate_Limit__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aggregate_Limit__c</fullName>
    <label>Aggregate Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>