force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/leaseworks__Aircraft__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft__c</fullName>
    <label>Aircraft</label>
    <referenceTo>leaseworks__Aircraft__c</referenceTo>
    <relationshipLabel>Insurance Certificates</relationshipLabel>
    <relationshipName>Insurance_Certificates_IR</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>