force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/leaseworks__Certificate_Excess_War_Liability__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Certificate_Excess_War_Liability__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Certificate Excess War Liability</label>
    <type>Checkbox</type>
</CustomField>