force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/leaseworks__Confiscation_Cover_Under_Lease__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Confiscation_Cover_Under_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Confiscation Cover Under Lease</label>
    <type>Checkbox</type>
</CustomField>