force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/leaseworks__Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Reinsurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>