force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/leaseworks__Policy_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Policy_Start_Date__c</fullName>
    <label>Policy Start Date</label>
    <type>Date</type>
</CustomField>