force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/Policy_AOS_Local__c.field-meta.xml
<CustomField>
    <fullName>Policy_AOS_Local__c</fullName>
    <label>Policy AOS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>