force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/Policy_Comments_Local__c.field-meta.xml
<CustomField>
    <fullName>Policy_Comments_Local__c</fullName>
    <label>Policy Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>