force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/Policy_Currency_Local__c.field-meta.xml
<CustomField>
    <fullName>Policy_Currency_Local__c</fullName>
    <label>Policy Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US Dollars</fullName>
            </value>
            <value>
                <fullName>Euro</fullName>
            </value>
            <value>
                <fullName>Great Britain Pounds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>