force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/Policy_MIR_Local__c.field-meta.xml
<CustomField>
    <fullName>Policy_MIR_Local__c</fullName>
    <label>Policy MIR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>