force-app/main/default/objects/leaseworks__Insurance_Certificate_IR__c/fields/Policy_MIR_Overwrite_Local__c.field-meta.xml
<CustomField>
    <fullName>Policy_MIR_Overwrite_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Policy MIR Overwrite</label>
    <type>Checkbox</type>
</CustomField>